--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "The Face We Make",
     "short_name": "thefacewemake",
-    "thumbnail": "http://img37.imageshack.us/img37/156/flickrpersonthumbnail.png",
+    "thumbnail": "http://farm7.staticflickr.com/6006/5977819291_66efdc6cc6.jpg",
     "description": "Facial expressions that convey feelings",
     "question": "What emoticon is he/she representing?"
 }
